--- a/cv/index.html
+++ b/cv/index.html
@@ -35,10 +35,10 @@
         <h3 style)¡="font-size:36px;font.weight:700;">PROFESIONAL EXPERIENCE</h3>
         <div>
         <dl>
-          <dt style="font.size:22px;text-transform:uppercase;margin-botttom:12px;margin-top:36px;">Introduccion a la Programacion</dt>
-          <dd>2020- codigofacilito</dd>
-          <dt style="font.size:22px;text-transform:uppercase;margin-botttom:12px;margin-top:36px;">Introduccion a Windows Server</dt>
-          <dd>2020- jgaitpro</dd>
+          <dt style="font.size:22px;text-transform:uppercase;margin-botttom:12px;margin-top:36px;">WINDOWS SERVER</dt>
+          <dd>2020- JGAITPRO</dd>
+          <dt style="font.size:22px;text-transform:uppercase;margin-botttom:12px;margin-top:36px;">LINUX/UBUNTU</dt>
+          <dd>2020- YOUTUBE</dd>
           </dl>
         </div>
       </div>
@@ -52,7 +52,10 @@
         <div style="margin-top:50px;">
           <h3 style="text-align:center;font-size:36px;font.weight:700;">OTHER</h3>
           <ul style="margin.top:12px:padding: 0px;">
-            <li style="text-align:center;margin.top:16px;">10 years fixing computers</li>
+            <li style="text-align:center;margin.top:16px;">10 YEARS FIXING COMPUTERS WINDOWS AND MAC OS X</li>
+            <ul style="margin.top:12px:padding: 0px;">
+                <div style="margin-top:50px;">
+              <li style="text-align:center;margin.top:16px;">WEB PAGES WITH WORDPRESS</li>
             </ul>
             </div>
             <div style="margin-top:50px;">
